# upowerz

./: Cargo.toml
src/: battery.rs  keyboard.rs  lib.rs  logging.rs  types.rs
src/xmlgen/: display_device.rs  keyboard.rs  mod.rs  upower.rs
