[package]
name = "upowerz"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "async-await-macro",
] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_repr = { version = "0.1.19", default-features = false }
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = { version = "0.1.40", default-features = false, optional = true }
zbus = { version = "5.1.1", default-features = false }

[features]
tokio = ["zbus/tokio"]
async-io = ["zbus/async-io"]
tracing = ["dep:tracing"]
